--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,13 @@
-API_ID = 
-API_HASH = 
-BOT_TOKEN = 
-MONGO_DB_URI = 
-INDEX_CHANNEL_ID = 
-UPLOADS_CHANNEL_ID = 
-STATUS_MSG_ID = 
-SCHEDULE_MSG_ID = 
-CHANNEL_TITLE = 
-INDEX_CHANNEL_USERNAME = 
-UPLOADS_CHANNEL_USERNAME = 
+import os
+
+API_ID = int(os.getenv("API_ID"))
+API_HASH = os.getenv("API_HASH")
+BOT_TOKEN = os.getenv("BOT_TOKEN")
+MONGO_DB_URI = os.getenv("MONGO_DB_URI")
+INDEX_CHANNEL_ID = int(os.getenv("INDEX_CHANNEL_ID"))
+UPLOADS_CHANNEL_ID = int(os.getenv("UPLOADS_CHANNEL_ID"))
+STATUS_MSG_ID = int(os.getenv("STATUS_MSG_ID"))
+SCHEDULE_MSG_ID = int(os.getenv("SCHEDULE_MSG_ID"))
+CHANNEL_TITLE = os.getenv("CHANNEL_TITLE")
+INDEX_CHANNEL_USERNAME = os.getenv("INDEX_CHANNEL_USERNAME")
+UPLOADS_CHANNEL_USERNAME = os.getenv("UPLOADS_CHANNEL_USERNAME")
